--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -425,6 +425,9 @@ btcStaticLenLeWlan=70000
 #Disable Fatal event
 gEnableFatalEvent=0
 
+#Enable Power Save offload
+gEnablePowerSaveOffload=4
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
