rosy: wifi: set beacon missed count threshold
Setting the beacon missed count threshold
with a difference of 10 to improve stability
of the WIFI connection.

Change-Id: Iea459ead3505bcea1a41f9b0e713957092bf4745
Signed-off-by: Alex Naidis <alex.naidis@linux.com>
Signed-off-by: TogoFire <italomellopereira@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -428,6 +428,10 @@ gEnableFatalEvent=0
 #Enable Power Save offload
 gEnablePowerSaveOffload=4
 
+# TheCrazyLex@PA set beacon missed count threshold to improve stability
+gRoamBmissFirstBcnt=25
+gRoamBmissFinalBcnt=35
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
