rosy: wifi: disable RTT
Signed-off-by: KenHV <kenhv@null.net>
Signed-off-by: rayrzy <vincentrayananda@gmail.com>

--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -432,6 +432,9 @@ gEnablePowerSaveOffload=4
 gRoamBmissFirstBcnt=25
 gRoamBmissFinalBcnt=35
 
+#Disable RTT as recommended by QC
+gEnableRTTSupport=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
