--- a/configs/gps/gps.conf
+++ b/configs/gps/gps.conf
@@ -1,3 +1,7 @@
+XTRA_SERVER_1=http://gllto.glpals.com/7day/v5/latest/lto2.dat
+XTRA_SERVER_2=http://gllto1.glpals.com/7day/v5/latest/lto2.dat
+XTRA_SERVER_3=http://gllto2.glpals.com/7day/v5/latest/lto2.dat
+
 #Version check for XTRA
 #DISABLE = 0
 #AUTO    = 1
@@ -11,7 +15,7 @@ XTRA_VERSION_CHECK=0
 ERR_ESTIMATE=0
 
 #NTP server
-NTP_SERVER=time.izatcloud.net
+NTP_SERVER=1.android.pool.ntp.org
 
 #XTRA CA path
 XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
@@ -19,7 +23,7 @@ XTRA_CA_PATH=/usr/lib/ssl-1.1/certs
 # DEBUG LEVELS: 0 - none, 1 - Error, 2 - Warning, 3 - Info
 #               4 - Debug, 5 - Verbose
 # If DEBUG_LEVEL is commented, Android's logging levels will be used
-DEBUG_LEVEL = 3
+DEBUG_LEVEL = 2
 
 # Intermediate position report, 1=enable, 0=disable
 INTERMEDIATE_POS=0
@@ -59,8 +63,8 @@ CAPABILITIES=0x17
 ################################
 
 # FOR SUPL SUPPORT, set the following
-# SUPL_HOST=supl.host.com or IP
-# SUPL_PORT=1234
+SUPL_HOST=supl.google.com
+SUPL_PORT=7275
 
 # FOR MO SUPL SUPPORT, set the following
 # MO_SUPL_HOST=supl.host.com or IP
@@ -322,3 +326,23 @@ CP_MTLR_ES=0
 # and QCSR SS5 hardware receiver.
 # By default QTI GNSS receiver is enabled.
 # GNSS_DEPLOYMENT = 0
+
+##################################################
+## LOG BUFFER CONFIGURATION
+##################################################
+#LOG_BUFFER_ENABLED, 1=enable, 0=disable
+#*_LEVEL_TIME_DEPTH, maximum time depth of level *
+#in log buffer, unit is second
+#*_LEVEL_MAX_CAPACITY, maximum numbers of level *
+#log print sentences in log buffer
+LOG_BUFFER_ENABLED = 0
+E_LEVEL_TIME_DEPTH = 600
+E_LEVEL_MAX_CAPACITY = 50
+W_LEVEL_TIME_DEPTH = 500
+W_LEVEL_MAX_CAPACITY = 100
+I_LEVEL_TIME_DEPTH = 400
+I_LEVEL_MAX_CAPACITY = 200
+D_LEVEL_TIME_DEPTH = 30
+D_LEVEL_MAX_CAPACITY = 300
+V_LEVEL_TIME_DEPTH = 200
+V_LEVEL_MAX_CAPACITY = 400
