rosy: rootdir: create folder for secure_element
Signed-off-by: rayrzy <vincentrayananda@gmail.com>

--- a/rootdir/init.qcom.rc
+++ b/rootdir/init.qcom.rc
@@ -267,6 +267,9 @@ on post-fs-data
     mkdir /data/vendor/fm 0770 system system
     chmod 0770 /data/vendor/fm
 
+    # Secure Element directory for loader service functionality
+    mkdir /data/vendor/secure_element 0770 secure_element secure_element
+
     #Create IOP  deamon related dirs
     mkdir /data/vendor/iop 0700 root system
 
