rosy: remove chown permission for display_pwr node
reverts: 08d76165d89c6907813aac1a2e2f1144e6e83b4a

node does not exists(requires kernel 4.4 or above), more explained here 865f2157b5e75ad1057e7859140fc8a20c2a7c85

Signed-off-by: Pulkit077 <pulkitagarwal2k1@gmail.com>
Signed-off-by: rayrzy <vincentrayananda@gmail.com>

--- a/rootdir/init.target.rc
+++ b/rootdir/init.target.rc
@@ -182,7 +182,7 @@ on boot
     write /dev/cpuset/system-background/cpus 0-3
     write /dev/cpuset/restricted/cpus 0-3
 
-    chown system system /sys/kernel/hbtp/display_pwr
+    #chown system system /sys/kernel/hbtp/display_pwr
 
 # access permission for wlan
     chown system system /mnt/vendor/persist/WCNSS_qcom_wlan_nv.bin
